src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A12.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A12 {
  class C1 {
    String Attr;
  }  
}
